--- a/pet-webpage.html
+++ b/pet-webpage.html
@@ -16,6 +16,7 @@
         <li>A cat</li>
     </ol>
     <h2>A CAT</h2>
+    <img src="https://img.purch.com/rc/696x392/aHR0cDovL3d3dy5saXZlc2NpZW5jZS5jb20vaW1hZ2VzL2kvMDAwLzEwNC84MzAvb3JpZ2luYWwvc2h1dHRlcnN0b2NrXzExMTA1NzIxNTkuanBn">
     <p>The cat is a small carnivorous mammal. It is the only domesticated species in the family Felidae and often referred to as the domestic cat to distinguish it from wild members of the family.</p>
     <p>below is a list of a cat's favorite toys</p>
     <ul>
@@ -24,8 +25,10 @@
         <li>smarty cat</li>
     </ul>
     <h2>A DOG</h2>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTl6J8uWbH7Au8c1ZbBvsQWyr_-L1jtFz3BPUol9JqjcY5F735h">
     <p>The domestic dog is a member of the genus Canis, which forms part of the wolf-like canids, and is the most widely abundant terrestrial carnivore.</p>
     <p>below is alist of dog's favorite toys</p>
+
     <ul>
         <li>squeakers</li>
         <li>plushies</li>
